# osg2gltf

./: .gitignore  CMakeLists.txt  test
include/: Application.hpp
include/gltf/: Buffer.hpp  Mesh.hpp  Node.hpp  Scene.hpp
include/osg/: Geode.hpp  Geometry.hpp  Group.hpp  Image.hpp  Matrix_transform.hpp  Object.hpp  State_set.hpp  Texture2d.hpp
include/osg_types/: Attribute_list.hpp  Blend_func.hpp  Data_variance.hpp  Geode.hpp  Geometry.hpp  Group.hpp  Material.hpp  Matrix_transform.hpp  Mode_list.hpp  Node.hpp  State_set.hpp  Texture2d.hpp  enums.hpp
src/: Application.cpp  main.cpp
